# baselib

./: .gitignore  Makefile.am  README.md  config.h  config.h.in  configure.ac
inc/: bufops.h  connection.h  dllist.h  miscutil.h  modids.h  osa.h  osserial.h  qfifo.h  rawtypes.h  server.h  sllist.h  usrlog.h
src/: Makefile.am  connection.c  dllist.c  miscutil.c  netsock.c  netsock.h  osserial.c  qfifo.c  server.c  sllist.c  usrlinuxos.c  usrlinuxos.h  usrlog.c
