AUTOMAKE_OPTION=foreign
SUBDIRS=src
AM_CPPFLAGS=-I$(abs_top_srcdir)/inc
export AM_CPPFLAGS
baseincludedir=$(includedir)/
baseinclude_HEADERS=$(abs_top_srcdir)/inc/connection.h \
                    $(abs_top_srcdir)/inc/bufops.h \
                    $(abs_top_srcdir)/inc/dllist.h \
                    $(abs_top_srcdir)/inc/miscutil.h \
                    $(abs_top_srcdir)/inc/modids.h \
                    $(abs_top_srcdir)/inc/osa.h \
                    $(abs_top_srcdir)/inc/osserial.h \
                    $(abs_top_srcdir)/inc/qfifo.h \
                    $(abs_top_srcdir)/inc/rawtypes.h \
                    $(abs_top_srcdir)/inc/server.h \
                    $(abs_top_srcdir)/inc/sllist.h \
                    $(abs_top_srcdir)/inc/usrlog.h
